# gender_bender

./: .gitignore  README.md  gender_bender.py  main.py  messing_around.py  pyproject.toml  requirements.txt  test.py
examples/: bobs_adventures_in_wonderland.epub  dawn_quixote.epub  francescastein.epub  olivia_twist.epub
gender_bender/: __init__.py  gender_tools.py  pluralize.py  test.py
gender_bender/language_models/: README.md
gender_bender/language_models/english/: female_names  male_names  words
language_models/: english  english.txt
language_models/english/: README.md  female_names  words
