[tool.poetry]
name = "gender-bender"
version = "0.1.1"
description = "Flips the gender in a text snippet or epub"
authors = ["Garrett-R"]
license = "Apache-2.0"
readme = 'README.md'
repository = "https://github.com/Garrett-R/gender_bender"
homepage = "https://github.com/Garrett-R/gender_bender"

[tool.poetry.dependencies]
python = "^3.6"
EbookLib = "^0.17.1"
gender-guesser = "^0.4.0"
spacy = "^2.3.2"
termcolor = "^1.1.0"
titlecase = "^1.1.1"

[tool.poetry.dev-dependencies]
mock = "^2.0.0"
nose = "^1.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
